--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "nodemailer": "^6.9.4",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
@@ -51,6 +53,7 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.9",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
