--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@prisma/client": "^5.1.1",
+    "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express-handlebars": "^7.1.1",
