--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-handlebars": "^7.1.1",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "jsonwebtoken": "^9.0.1",
     "nodemailer": "^6.9.4",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
